--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -13,6 +13,8 @@ cffi==1.15.0
 charset-normalizer==2.0.12
 click==8.0.3
 colorama==0.4.4
+coreapi==2.3.3
+coreschema==0.0.4
 cryptography==37.0.2
 debugpy==1.5.1
 decorator==5.1.1
@@ -21,14 +23,18 @@ dj-rest-auth==2.2.4
 Django==3.2.12
 django-allauth==0.50.0
 django-cors-headers==3.12.0
+django-extensions==3.1.5
 djangorestframework==3.13.1
+drf-yasg==1.20.0
 entrypoints==0.3
 executing==0.8.2
 Faker==11.3.0
 idna==3.3
+inflection==0.5.1
 ipykernel==6.7.0
 ipython==8.0.0
 ipython-genutils==0.2.0
+itypes==1.2.0
 jedi==0.18.1
 Jinja2==3.0.3
 jsonschema==4.4.0
@@ -75,6 +81,8 @@ PyYAML==6.0
 pyzmq==22.3.0
 requests==2.27.1
 requests-oauthlib==1.3.1
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.6
 Send2Trash==1.8.0
 six==1.16.0
 soupsieve==2.3.1
@@ -90,6 +98,7 @@ tornado==6.1
 traitlets==5.1.1
 typing_extensions==4.0.1
 tzdata==2021.5
+uritemplate==4.1.1
 urllib3==1.26.9
 wcwidth==0.2.5
 webencodings==0.5.1
