--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ defusedxml==0.7.1
 dj-rest-auth==2.2.4
 Django==3.2.12
 django-allauth==0.50.0
+django-bootstrap-v5==1.0.11
 django-cors-headers==3.12.0
 django-extensions==3.1.5
 djangorestframework==3.13.1
@@ -75,6 +76,8 @@ pyrsistent==0.18.1
 python-dateutil==2.8.2
 python3-openid==3.2.0
 pytz==2021.3
+pywin32==304
+pywinpty==2.0.5
 PyYAML==6.0
 pyzmq==22.3.0
 requests==2.27.1
